--- a/src/stv-color-picker.html
+++ b/src/stv-color-picker.html
@@ -9,6 +9,8 @@
         }
 
         #colorinput {
+            font-family: inherit;
+            font-size: inherit;
             box-sizing: border-box;
             display: block;
             float: left;
@@ -18,7 +20,6 @@
             width: calc(100% - 21px);
             background-color: #ffffff;
             line-height: 21px;
-            font-size: inherit;
             transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
         }
 
